@@ -59,6 +59,7 @@ lilv_world_new(void)
     goto fail;
   }
 
+  world->lang           = lilv_get_lang();
   world->specs          = NULL;
   world->plugin_classes = lilv_plugin_classes_new();
   world->plugins        = lilv_plugins_new();
@@ -195,6 +196,7 @@ lilv_world_free(LilvWorld* world)
   world->world = NULL;
 
   free(world->opt.lv2_path);
+  free(world->lang);
   free(world);
 }
 
@@ -204,6 +206,12 @@ lilv_world_set_option(LilvWorld* world, const char* uri, const LilvNode* value)
   if (!strcmp(uri, LILV_OPTION_DYN_MANIFEST)) {
     if (lilv_node_is_bool(value)) {
       world->opt.dyn_manifest = lilv_node_as_bool(value);
+      return;
+    }
+  } else if (!strcmp(uri, LILV_OPTION_LANG)) {
+    if (lilv_node_is_string(value)) {
+      free(world->lang);
+      world->lang = lilv_normalize_lang(lilv_node_as_string(value));
       return;
     }
   } else if (!strcmp(uri, LILV_OPTION_FILTER_LANG)) {
